fix scrollbar for that block

--- a/wp-content/themes/drivewyze/assets/styles/blocks/_hero-product.scss
+++ b/wp-content/themes/drivewyze/assets/styles/blocks/_hero-product.scss
@@ -100,7 +100,7 @@
       justify-content: space-between;
       max-width: 100%;
       width: 100%;
-      overflow-x: scroll;
+      overflow-x: hidden;
       overflow-y: hidden;
     }
 
@@ -326,6 +326,10 @@
       .hero-product-section-tabs-content__item-container {
         overflow-y: hidden;
         overflow-x: scroll;
+
+        @media (min-width: $bp-M) {
+          overflow-x: hidden;
+        }
       }
 
       @media (min-width: $bp-M) {
